src/yini_test/cases/golden/strict/invalid/sections/section-numeric-shorthand-no-space.strict.yini
@yini strict

^1 Level01
^2 Level02
^3 Level03
^4 Level04
^5 Level05
^6 Level06
^7SectionName
value = true

/END
